# dots

./: .chezmoi.toml.tmpl  .chezmoiignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  install.sh  keybinds.md  pkgs  pkgs-to-install.txt  ruff.toml  run_after_system-deploy.sh.tmpl  run_onchange_install-deps.sh.tmpl  secrets.age  tree.md
.config/: picom.conf
dot_config/qtile/: config.py  mypy.ini  pyproject.toml  tox.ini  xephyr_config.py
dot_config/qtile-wl/: AGENTS.md  CLAUDE.md  config.py  encrypted_github_token  github_token  pyproject.toml  wephyr_cfg.py
dot_config/qtile-wl/extras/: mutablescratch.py
dot_config/qtile-wl/extras/mixins/: __init__.py
dot_config/qtile-wl/extras/widgets/: battery.py  battery_icon.py  bt_bat.py  checkupdates.py  cputemp.py  mouseoverclock.py  tasklist.py  weather.py  widgetbox.py
dot_config/qtile-wl/firefox_themes/: executable_get_firefox_theme.py  firefox_theme.json
dot_config/qtile-wl/firefox_themes/themes/: catppuccin.json  nord.json
dot_config/qtile-wl/json/: config.json  focus_history.json  settings.json  settings.json.tmpl  themes.json  window_rules.json
dot_config/qtile-wl/modules/: __init__.py  decorations.py  functions.py  idle.py  idle_timers.py  layouts.py  matches.py  models.py  mouse.py  path.py  screens.py  settings.py  tabbed.py  widget_names.py
dot_config/qtile-wl/modules/groups/: __init__.py  scratchpad.py
dot_config/qtile-wl/modules/hooks/: apps.py  misc.py  qalttab.py  window_rules.py
dot_config/qtile-wl/modules/keys/: __init__.py  apps.py  de.py  layout_managing.py  layouts.py  qtile_stuff.py  window_managing.py  windows_and_groups.py
dot_config/qtile-wl/scripts/: autohide.py  listen_for_alt_release.py  rofi_layout.py
dot_config/qtile-wl/symlinks/: qtile_extras
dot_config/qtile-wl/themes/: nord.json
dot_config/qtile/firefox_themes/: firefox_theme.json
dot_config/qtile/json/: config.json  settings.json  settings.json.tmpl  themes.json  window_rules.json
dot_config/qtile/modules/: __init__.py  decorations.py  functions.py  layouts.py  matches.py  models.py  path.py  screens.py  settings.py
dot_config/qtile/scripts/: qchanger.py  rofi_layout.py  set_spotify_size.py
dot_config/qtile/themes/: catppuccin.json  nord.json
(+484 files in other folders)
